--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="twitter:title" content="Эпизоды из Советских фильмов: ( Дознание ВЕЛИ )..">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/5454-128x61.png" type="image/x-icon">
-  <meta name="description" content="">
+  <meta name="description" content="Короткие видеоролики из фильмов">
   
   
   <title>Эпизоды из Советских фильмов: ( Дознание ВЕЛИ )..</title>
