--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
 </div>
 </div></strong></span></div></div>
 <center>
+<script async="async" src="https://w.uptolike.com/widgets/v1/zp.js?pid=2047148" type="text/javascript"></script>
 </center>
 </section>
 
